# sentinel

./: .gitignore  CLAUDE.md  README.md  cli.py  install_hook.sh  pyproject.toml  requirements-demo.txt  requirements.txt
demo/: add_voiceover.py  demo_timings.py  record_demo.py  terminal_output.py  voiceover_script.py
docs/: index.html
engine/: agent.py  github_mcp.py  mcp_tools.py  tools.py
evals/: pyramid_past_bugs.yaml  run.py
rules/: fintech.yaml  healthcare.yaml
