[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-review"
version = "0.1.0"
description = "Domain-aware AI code reviewer. Open engine, vertical rule packs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai", "code-review", "git", "llm", "agent", "pre-commit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "google-adk>=1.31.1",
    "google-generativeai>=0.8.0",
    "pyyaml>=6.0",
    "gitpython>=3.1",
    "rich>=13.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
demo = ["edge-tts", "playwright"]

[project.urls]
Homepage    = "https://mugeshgithub.github.io/sentinel"
Repository  = "https://github.com/Mugeshgithub/sentinel"
"Bug Tracker" = "https://github.com/Mugeshgithub/sentinel/issues"

[project.scripts]
sentinel = "cli:main"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
where     = ["."]
include   = ["engine*", "rules*"]
exclude   = ["venv*", "demo*", "evals*", "docs*"]

[tool.setuptools.package-data]
rules = ["*.yaml"]
